# Churchill-Magnum

./: .gitignore  .gitmodules  .plan  CMakeLists.txt  resources.conf  vcpkg.json
res/: player_resources.conf  sprites.conf  ui_resources.conf
src/: CMakeLists.txt  Game.cpp  Game.h  GameComponents.hpp  GameSystems.cpp  Sprite.cpp  Sprite.h  SpriteLoader.h  SpriteLoader.hpp
src/Components/: GameComponents.hpp  Sprite.cpp  Sprite.h  Transform.cpp
src/Engine/: GameEngine.h  GameEngineCore.cpp  GameEngineUI.cpp  GameSystems.cpp
src/Entities/: EnemyFab.hpp  Entity.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp
